# femps

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler_flags_GNU_Fortran.cmake  femps_compiler_flags.cmake  femps_extra_macros.cmake
mains/: .femps_test.f90.swp  fempoisson_driver.f90  femps_test.f90
progenitor/: emails_jt.txt  fempoisson.f90  poissonnml.in
src/: CMakeLists.txt  fempoisson_constants_mod.f90  fempoisson_mod.f90  femps_cstestgrid_mod.f90  femps_io_mod.f90  femps_mod.f90  femps_types_mod.f90  femps_utils_mod.f90
src/femps/: CMakeLists.txt  femps_const_mod.f90  femps_constants_mod.f90  femps_cstestgrid_mod.f90  femps_fv3_mod.f90  femps_grid_mod.f90  femps_inout_mod.f90  femps_kinds_mod.f90  femps_operators_mod.f90  femps_solve_mod.f90  femps_testgrid_mod.f90  femps_types_mod.f90  femps_unused_mod.f90  femps_utils_mod.f90
src/jtcode/: gengrid_cube2.f90  gengrid_hex.f
src/mains/: CMakeLists.txt  femps_test.f90
src/utils/: fv3_bisect.py  plot_grid.py
test/: CMakeLists.txt
test/mains/: femps_test.f90  test_femps_csgrid.f90
